<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/gray14"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/include_title"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/include">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:autoLink="all"
                android:text="@string/zhanghuzhuce"
                android:textColor="@color/blue8"
                android:textSize="@dimen/textsize_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:autoLink="all"
                            android:text="@string/youxiang"
                            android:textColor="@color/blue9"
                            android:textSize="@dimen/textsize_4" />

                        <EditText
                            android:id="@+id/et_email"
                            style="@style/et_style_login"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:drawablePadding="20dp"
                            android:gravity="right"
                            android:hint="@string/qingtianxieyouxiang"
                            android:inputType="number"
                            android:maxLength="11" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/gray17" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:autoLink="all"
                            android:text="@string/zhanghuming2"
                            android:textColor="@color/blue9"
                            android:textSize="@dimen/textsize_4" />

                        <EditText
                            android:id="@+id/et_user"
                            style="@style/et_style_login"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:drawablePadding="20dp"
                            android:gravity="right"
                            android:hint="@string/qingtianxiezhanghuming"
                            android:inputType="number"
                            android:maxLength="11" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/gray17" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:autoLink="all"
                            android:text="@string/denglumima"
                            android:textColor="@color/blue9"
                            android:textSize="@dimen/textsize_4" />

                        <EditText
                            android:id="@+id/et_pwd"
                            style="@style/et_style_login"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:drawablePadding="20dp"
                            android:gravity="right"
                            android:hint="@string/qingtianxiemima"
                            android:inputType="number"
                            android:maxLength="11" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_bg_gray"
                android:enabled="false"
                android:text="@string/lijizhuce"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_4" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/cb_agree"
                    style="@style/check_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:checked="false"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="@string/tongyi"
                    android:textColor="@color/blue9"
                    android:textSize="@dimen/textsize_3" />

                <TextView
                    android:id="@+id/tv_xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/xieyi"
                    android:textColor="@color/blue9"
                    android:textSize="@dimen/textsize_3" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>