<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray14"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/activity_title"
        layout="@layout/include_title" />


    <LinearLayout
        android:id="@+id/view_orders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yanzhengxinxijieshou"
            android:textColor="@color/gray15"
            android:textSize="@dimen/textsize_3" />

        <EditText
            android:id="@+id/et_email"
            style="@style/et_style_noline"
            android:layout_marginLeft="1dp"
            android:text="sssss"
            android:textSize="@dimen/textsize_3" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_verification_code"
            style="@style/et_style_noline"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawablePadding="20dp"
            android:hint="@string/shuruyanzhengma"
            android:inputType="textVisiblePassword"
            android:maxLength="6"
            android:textSize="@dimen/textsize_3" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_green_hollow"
            android:enabled="true"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/fasongyanzhengma"
            android:textColor="@color/green2"
            android:textSize="@dimen/textsize_3" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/btn_common_bg"
        android:gravity="center"
        android:text="@string/yanzhengxinxi"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_3" />


</LinearLayout>
